stateDiagram-v2
    direction TB

    [*] --> PENDING

    PENDING --> TAKEN : User marks taken
    PENDING --> MISSED : Grace period expires
    PENDING --> SKIPPED : User skips

    note right of PENDING
        Grace period running before expiry
    end note

    note right of TAKEN
        Counts toward adherence %
    end note

    note right of MISSED
        Alert triggered
    end note

    note right of SKIPPED
        User intentionally skipped
    end note